<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/Flash"
        android:icon="@drawable/ic_flash_on"
        android:title="@string/flash"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/Focus"
        android:icon="@drawable/ic_center_focus_weak"
        android:title="@string/focus"
        app:showAsAction="always"/>

    <item android:id="@+id/Camara"
        android:icon="@drawable/ic_camera_front"
        android:title="@string/camara"
        app:showAsAction="always"/>

    <item
        android:id="@+id/Load"
        android:icon="@drawable/ic_image"
        android:title="@string/Image"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/History"
        android:icon="@drawable/ic_history"
        android:title="@string/historial"
        app:showAsAction="ifRoom"/>

</menu>