<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:background="@color/colorPrimaryDark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10.0dip"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24.0dip"
                android:padding="5.0dip"
                android:text="@string/login_usernew_"
                android:textColor="@android:color/white"
                android:textSize="36.0sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36.0dip"
                android:layout_marginTop="10.0dp"
                android:layout_marginEnd="36.0dip"
                android:background="@drawable/btn_corner5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_add_a_photo"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    tools:ignore="ContentDescription"
                    android:layout_gravity="start"
                    android:id="@+id/addImage"
                    android:padding="@dimen/activity_horizontal_margin" />

                <View
                    android:layout_width="1.0dip"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12.0dip"
                    android:padding="5.0dip"
                    android:text="@string/please_signin"
                    android:textColor="@android:color/white"
                    android:textSize="15.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="36.0dip"
                android:layout_marginTop="35.0dip"
                android:layout_marginEnd="36.0dip"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:paddingTop="@dimen/spacing_medium"
                    android:theme="@style/EditTextWhite"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/lytName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bg_blue"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="10.0dip"
                        android:hint="@string/login_user_hint"
                        android:inputType="text"
                        android:padding="20.0dip"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:paddingTop="@dimen/spacing_medium"
                    android:theme="@style/EditTextWhite"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/lytMail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:backgroundTint="@color/bg_blue"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawablePadding="10.0dip"
                        android:padding="20.0dip"
                        android:id="@+id/Mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:passwordToggleTint="@color/whiteCardColor"
                    android:paddingTop="@dimen/spacing_medium"
                    android:theme="@style/EditTextWhite"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    android:id="@+id/lytPass">

                    <com.google.android.material.textfield.TextInputEditText
                        android:backgroundTint="@color/bg_blue"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="10.0dip"
                        android:padding="20.0dip"
                        android:id="@+id/Pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:gravity="center"
                    android:id="@+id/register5"
                    android:background="@drawable/btn_corner"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/bg_blue"
                    android:layout_marginStart="20.0dip"
                    android:layout_height="wrap_content"
                    app:spinning_bar_color="@color/red"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="50.0dip"
                    android:layout_marginEnd="20.0dip"
                    android:layout_gravity="center"
                    app:spinning_bar_padding="6dp"
                    app:initialCornerAngle="90dp"
                    app:spinning_bar_width="4dp"
                    app:finalCornerAngle="90dp"
                    android:textStyle="bold"
                    android:text="@string/sigup"/>

                <LinearLayout
                    android:id="@+id/lytIngresar"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:padding="5.0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/signup_login_hint"
                        android:textColor="@android:color/white"
                        android:textSize="13.0sp" />

                    <TextView
                        android:padding="5.0dip"
                        android:id="@+id/signIn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/signin"
                        android:textColor="@android:color/white"
                        android:textSize="13.0sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>